# eve_item_configurator_firestore_accessor_rs

./: Cargo.toml
src/: accessor.rs  client.rs
