[package]
name = "eve_item_configurator_firestore_accessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eve_item_configurator_server = { git = "https://github.com/WiggidyW/eve_item_configurator_server_rs.git" }
gcloud-sdk = { version = "0.20.3" }
firestore = { version = "0.32.2" }
serde = { version = "1.0" }
